fix background color of dropdown nav in dark mode

--- a/src/Resources/public/scss/color_schemes/nature_dark_mode.scss
+++ b/src/Resources/public/scss/color_schemes/nature_dark_mode.scss
@@ -27,6 +27,10 @@ $darkMode_input-focus-border-color: $grey-darker;
       background: rgba($black-ter, 0.7);
     }
 
+    .navbar-dropdown {
+      background: $black-ter;
+    }
+
     &, #container {
       color: $darkMode_text;
     }
